--- a/css/style.css
+++ b/css/style.css
@@ -1083,8 +1083,21 @@ input[type="radio"].visually-hidden {
   box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
 }
 
+  @keyframes bounce {
+    0%   { transform: translate(-50%, 2000px); }
+    37%  { transform: translate(-50%, -50%); }
+    55%  { transform: translate(-50%, -37%); }
+    73%  { transform: translate(-50%, -50%); }
+    82%  { transform: translate(-50%, -46%); }
+    91%  { transform: translate(-50%, -50%); }
+    96%  { transform: translate(-50%, -49%);}
+    100% { transform: translate(-50%, -50%); }
+}
+
 .js-modal-show {
   display: block;
+  animation-name: bounce;
+  animation-duration: 0.7s;
 }
 
 .modal h2 {
