--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,7 @@ input[type="radio"].visually-hidden {
 }
 
 .promo {
+  position: relative;
   overflow: hidden;
 }
 
@@ -182,14 +183,15 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
   display: flex;
+  justify-content: space-between;
+  width: 3560px;
 }
 
 .slider {
   display: flex;
   position: relative;
   list-style: none;
-  min-width: 1160px;
-  margin-right: 20px;
+  width: 1160px;
 }
 
 .slider img {
@@ -211,7 +213,7 @@ input[type="radio"].visually-hidden {
 }
 
 .slider:nth-child(2) .slider-wrapper {
-  max-width: 550px;
+  max-width: 520px;
 }
 
 .slider:last-child .slider-wrapper {
@@ -238,6 +240,14 @@ input[type="radio"].visually-hidden {
   margin-bottom: 37px;
 }
 
+.slider:nth-child(2) span:last-child {
+  max-width: 420px;
+}
+
+.slider:last-child span:last-child {
+  max-width: 360px;
+}
+
 .button-slider {
   width: 240px;
   height: 50px;
@@ -255,6 +265,58 @@ input[type="radio"].visually-hidden {
   color: rgba(255, 255, 255, 0.3);
   background-color: #d7373b;
 }
+
+.js-show-slider-1 {
+  transform: translateX(0);
+}
+
+.js-show-slider-2 {
+  transform: translateX(-1200px);
+}
+
+.js-show-slider-3 {
+  transform: translateX(-2400px);
+}
+
+.slider-control ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  width: 70px;
+  bottom: 115px;
+  left: 50%;
+  transform: translateX(-50%);
+  list-style: none;
+}
+
+.slider-control-radio {
+  position: relative;
+  cursor: pointer;
+}
+
+.slider-control-radio input[type="radio"] + .slider-control-indicator {
+  position: absolute;
+  top: 1px;
+  left: -10px;
+  width: 18px;
+  height: 18px;
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+
+.slider-control-radio input[type="radio"]:checked + .slider-control-indicator::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 4px;
+  height: 4px;
+  border: 2px solid #c1c1c1;
+  border-radius: 50%;
+}
+
 
 .advantages {
   width: 1100px;
