--- a/css/prefix_style.css
+++ b/css/prefix_style.css
@@ -29,7 +29,9 @@ input[type="radio"].visually-hidden {
 
   white-space: nowrap;
 
-  clip-path: inset(100%);
+  -webkit-clip-path: inset(100%);
+
+          clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
@@ -55,7 +57,8 @@ input[type="radio"].visually-hidden {
 }
 
 .button:active {
-  box-shadow: inset 0 3px 0 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: inset 0 3px 0 0 rgba(0, 0, 0, 0.2);
+          box-shadow: inset 0 3px 0 0 rgba(0, 0, 0, 0.2);
 }
 
 
@@ -78,11 +81,20 @@ input[type="radio"].visually-hidden {
 }
 
 .main-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  align-items: flex-end;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   min-height: 124px;
 }
 
@@ -109,17 +121,25 @@ input[type="radio"].visually-hidden {
   padding-left: 80px;
   padding-right: 80px;
   padding-bottom: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 440px;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   list-style: none;
 }
 
 .main-navigation-cart {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   max-width: 200px;
   list-style: none;
   padding-bottom: 18px;
@@ -186,12 +206,18 @@ input[type="radio"].visually-hidden {
 .sliders {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 3560px;
 }
 
 .slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   list-style: none;
@@ -202,12 +228,19 @@ input[type="radio"].visually-hidden {
   position: absolute;
   bottom: 0;
   right: 30px;
-  order: 2;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
 }
 
 .slider-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-top: 68px;
   margin-bottom: 80px;
 }
@@ -271,31 +304,43 @@ input[type="radio"].visually-hidden {
 }
 
 .js-show-slider-1 {
-  transform: translateX(0);
+  -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .js-show-slider-2 {
-  transform: translateX(-1200px);
+  -webkit-transform: translateX(-1200px);
+      -ms-transform: translateX(-1200px);
+          transform: translateX(-1200px);
 }
 
 .js-show-slider-3 {
-  transform: translateX(-2400px);
+  -webkit-transform: translateX(-2400px);
+      -ms-transform: translateX(-2400px);
+          transform: translateX(-2400px);
 }
 
 .slider-control {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
+
 }
 
 .slider-control ul {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   position: absolute;
   width: 70px;
-  transform: translateX(-50%);
+  bottom: 115px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
   list-style: none;
 }
 
@@ -306,7 +351,7 @@ input[type="radio"].visually-hidden {
 
 .slider-control-radio input[type="radio"] + .slider-control-indicator {
   position: absolute;
-  top: 0;
+  top: 1px;
   left: -10px;
   width: 18px;
   height: 18px;
@@ -336,8 +381,12 @@ input[type="radio"].visually-hidden {
 .advantages-list {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .advantages-item {
@@ -422,8 +471,12 @@ input[type="radio"].visually-hidden {
 }
 
 .about-us {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-bottom: 50px;
   border-bottom: 2px solid #eeeeee;
 }
@@ -532,16 +585,28 @@ input[type="radio"].visually-hidden {
 .our-product-list {
   margin: 0;
   padding: 0;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
 }
 
 .our-projects-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 260px;
   height: 180px;
   opacity: 0.2;
@@ -569,13 +634,22 @@ input[type="radio"].visually-hidden {
   height: 416;
   top: 0;
   left: 50%;
-  transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
 }
 
 .footer-contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 320px;
   height: 310px;
   background-color: #ffffff;
@@ -618,24 +692,38 @@ input[type="radio"].visually-hidden {
 }
 
 .footer-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .social {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   list-style: none;
   width: 260px;
   margin-right: 140px;
 }
 
 .social-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 79px;
   height: 79px;
   background-color: #e1e1e1;
@@ -675,8 +763,12 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 60px;
 }
 
@@ -798,7 +890,9 @@ input[type="radio"].visually-hidden {
   width: 9px;
   height: 4px;
   background-color: #4d4d4d;
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 .filter-option-checkbox input[type="checkbox"]:checked + .checkbox-indicator::before {
@@ -809,8 +903,11 @@ input[type="radio"].visually-hidden {
   width: 16px;
   height: 4px;
   background-color: #4d4d4d;
-  box-shadow: 0 0 0 2px #ffffff;
-  transform: rotate(-45deg);
+  -webkit-box-shadow: 0 0 0 2px #ffffff;
+          box-shadow: 0 0 0 2px #ffffff;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 .filter-option-checkbox input[type="checkbox"]:checked:hover + .checkbox-indicator::after {
@@ -841,14 +938,20 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .catalog-filter fieldset {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   border: none;
   margin-bottom: 50px;
 }
@@ -869,14 +972,20 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-filter-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 360px;
 }
 
 .catalog-filter-list {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
 }
@@ -904,8 +1013,12 @@ input[type="radio"].visually-hidden {
 }
 
 .filter-sort-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -931,7 +1044,9 @@ input[type="radio"].visually-hidden {
 .filter-sort-item:last-child .filter-sort-option .filter-sort-indicator {
   top: -5px;
   left: -10px;
-  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .filter-sort-option input[type="radio"] + .filter-sort-indicator:hover,
@@ -948,9 +1063,14 @@ input[type="radio"].visually-hidden {
 .catalog-list {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   list-style: none;
   margin-bottom: 25px;
 }
@@ -996,9 +1116,14 @@ input[type="radio"].visually-hidden {
   left: 23px;
 }
 
+@-webkit-keyframes slide-down {
+  0% { -webkit-transform: translateY(-230px); transform: translateY(-230px); }
+  100% { -webkit-transform: translateY(0); transform: translateY(0); }
+}
+
 @keyframes slide-down {
-  0% { transform: translateY(-230px); }
-  100% { transform: translateY(0); }
+  0% { -webkit-transform: translateY(-230px); transform: translateY(-230px); }
+  100% { -webkit-transform: translateY(0); transform: translateY(0); }
 }
 
 .catalog-item-info {
@@ -1016,10 +1141,14 @@ input[type="radio"].visually-hidden {
 }
 
 .js-catalog-item-info-slide-down {
-  animation-name: slide-down;
-  animation-duration: 0.4s;
-  animation-timing-function: cubic-bezier(ease-in-out);
-  animation-fill-mode: forwards;
+  -webkit-animation-name: slide-down;
+          animation-name: slide-down;
+  -webkit-animation-duration: 0.4s;
+          animation-duration: 0.4s;
+  -webkit-animation-timing-function: cubic-bezier(ease-in-out);
+          animation-timing-function: cubic-bezier(ease-in-out);
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .catalog-item-info h3 {
@@ -1061,12 +1190,18 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-item:hover {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+}
+
+@-webkit-keyframes slide-up {
+  0%   { -webkit-transform: translateY(0); transform: translateY(0); }
+  100% { -webkit-transform: translateY(-230px); transform: translateY(-230px); }
 }
 
 @keyframes slide-up {
-  0%   { transform: translateY(0); }
-  100% { transform: translateY(-230px); }
+  0%   { -webkit-transform: translateY(0); transform: translateY(0); }
+  100% { -webkit-transform: translateY(-230px); transform: translateY(-230px); }
 }
 
 /* .catalog-item:hover .catalog-item-info {
@@ -1077,10 +1212,14 @@ input[type="radio"].visually-hidden {
 } */
 
 .js-catalog-item-info-slide-up {
-  animation-name: slide-up;
-  animation-duration: 0.4s;
-  animation-timing-function: cubic-bezier(ease-in-out);
-  animation-fill-mode: forwards;
+  -webkit-animation-name: slide-up;
+          animation-name: slide-up;
+  -webkit-animation-duration: 0.4s;
+          animation-duration: 0.4s;
+  -webkit-animation-timing-function: cubic-bezier(ease-in-out);
+          animation-timing-function: cubic-bezier(ease-in-out);
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .catalog-item:hover::before {
@@ -1090,6 +1229,8 @@ input[type="radio"].visually-hidden {
 .pagination-list {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-width: 50px;
   list-style: none;
@@ -1146,28 +1287,44 @@ input[type="radio"].visually-hidden {
   top: 50%;
   left: 50%;
   width: 760px;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   padding: 65px 100px;
   color: #000000;
   background-color: #ffffff;
-  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+  -webkit-box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+          box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+}
+
+  @-webkit-keyframes bounce {
+    0%   { -webkit-transform: translate(-50%, 2000px); transform: translate(-50%, 2000px); }
+    37%  { -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+    55%  { -webkit-transform: translate(-50%, -37%); transform: translate(-50%, -37%); }
+    73%  { -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+    82%  { -webkit-transform: translate(-50%, -46%); transform: translate(-50%, -46%); }
+    91%  { -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+    96%  { -webkit-transform: translate(-50%, -49%); transform: translate(-50%, -49%);}
+    100% { -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
 }
 
   @keyframes bounce {
-    0%   { transform: translate(-50%, 2000px); }
-    37%  { transform: translate(-50%, -50%); }
-    55%  { transform: translate(-50%, -37%); }
-    73%  { transform: translate(-50%, -50%); }
-    82%  { transform: translate(-50%, -46%); }
-    91%  { transform: translate(-50%, -50%); }
-    96%  { transform: translate(-50%, -49%);}
-    100% { transform: translate(-50%, -50%); }
+    0%   { -webkit-transform: translate(-50%, 2000px); transform: translate(-50%, 2000px); }
+    37%  { -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+    55%  { -webkit-transform: translate(-50%, -37%); transform: translate(-50%, -37%); }
+    73%  { -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+    82%  { -webkit-transform: translate(-50%, -46%); transform: translate(-50%, -46%); }
+    91%  { -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+    96%  { -webkit-transform: translate(-50%, -49%); transform: translate(-50%, -49%);}
+    100% { -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
 }
 
 .js-modal-show {
   display: block;
-  animation-name: bounce;
-  animation-duration: 0.7s;
+  -webkit-animation-name: bounce;
+          animation-name: bounce;
+  -webkit-animation-duration: 0.7s;
+          animation-duration: 0.7s;
 }
 
 .modal h2 {
@@ -1179,16 +1336,26 @@ input[type="radio"].visually-hidden {
 }
 
 .modal form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .modal p {
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-bottom: 30px;
 }
 
@@ -1204,7 +1371,8 @@ input[type="radio"].visually-hidden {
 }
 
 .modal input[type="text"] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 360px;
   padding: 10px 15px;
   font: inherit;
@@ -1225,7 +1393,8 @@ input[type="radio"].visually-hidden {
 
 .modal textarea {
  resize: none;
- box-sizing: border-box;
+ -webkit-box-sizing: border-box;
+         box-sizing: border-box;
  width: 760px;
  height: 115px;
  padding: 10px 15px;
@@ -1285,11 +1454,15 @@ input[type="radio"].visually-hidden {
 }
 
 .modal-close::before {
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 .modal-close::after {
-  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 .modal-close:hover::before,
