--- a/css/prefix_style.css
+++ b/css/prefix_style.css
@@ -201,6 +201,7 @@ input[type="radio"].visually-hidden {
 .promo {
   position: relative;
   overflow: hidden;
+  width: 1160px;
 }
 
 .sliders {
@@ -321,8 +322,15 @@ input[type="radio"].visually-hidden {
           transform: translateX(-2400px);
 }
 
-.slider-control {
-
+.slider-control-wrapper {
+  position: absolute;
+  bottom: 95px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 88px;
+  height: 18px;
 }
 
 .slider-control ul {
@@ -334,25 +342,21 @@ input[type="radio"].visually-hidden {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: absolute;
   width: 70px;
-  bottom: 115px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
   list-style: none;
 }
 
 .slider-control-radio {
   position: relative;
+  bottom: 0;
+  left: 0;
   cursor: pointer;
 }
 
 .slider-control-radio input[type="radio"] + .slider-control-indicator {
   position: absolute;
-  top: 1px;
-  left: -10px;
+  top: 0;
+  left: 0;
   width: 18px;
   height: 18px;
   background-color: #ffffff;
