--- a/css/style.css
+++ b/css/style.css
@@ -1064,8 +1064,13 @@ input[type="radio"].visually-hidden {
   background-color: #d7373b;
 }
 
-.catalog-item:hover {
+.catalog-item:hover,
+.catalog-item:hover::before {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+}
+
+.catalog-item:hover::before {
+  background-color: #4d4d4d;
 }
 
 @keyframes slide-up {
@@ -1085,10 +1090,6 @@ input[type="radio"].visually-hidden {
   animation-duration: 0.4s;
   animation-timing-function: cubic-bezier(ease-in-out);
   animation-fill-mode: forwards;
-}
-
-.catalog-item:hover::before {
-  background-color: #4d4d4d;
 }
 
 .pagination-list {
